[gd_scene load_steps=18 format=4 uid="uid://c33vn08tp8xcj"]

[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_3m100"]
[ext_resource type="Texture2D" uid="uid://bdmpp7s2pvh4i" path="res://Sprites/TIleset-export.png" id="1_nlsnc"]
[ext_resource type="PackedScene" uid="uid://dwesnj5ar3b04" path="res://Scenes/Turrets/turret_1.tscn" id="3_mmksu"]
[ext_resource type="PackedScene" uid="uid://lsn6qrjnqq6k" path="res://Scenes/Turrets/turret_2.tscn" id="4_ijbhd"]
[ext_resource type="PackedScene" uid="uid://c8ep200c7jr1g" path="res://Scenes/Turrets/turret_3.tscn" id="5_2nmox"]
[ext_resource type="PackedScene" uid="uid://7n7r0qabl4kf" path="res://Scenes/Turrets/turret_4.tscn" id="6_6wv7i"]
[ext_resource type="AudioStream" uid="uid://f5ksfarkylhf" path="res://Top Hat Tactics Menu.ogg" id="7_nfvdv"]

[sub_resource type="Curve2D" id="Curve2D_wb1y1"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -64, 294, 0, 0, 0, 0, 151, 295, 0, 0, 0, 0, 151, 199, 0, 0, 0, 0, 246, 201, 0, 0, 0, 0, 247, 294, 0, 0, 0, 0, 328, 294, 0, 0, 0, 0, 328, 201, 0, 0, 0, 0, 422, 201, 0, 0, 0, 0, 421, 88, 0, 0, 0, 0, 295, 87, 0, 0, 0, 0, 295, 134, 0, 0, 0, 0, 73, 132, 0, 0, 0, 0, 72, 87, 0, 0, 0, 0, -88, 85)
}
point_count = 14

[sub_resource type="Environment" id="Environment_x0dir"]
background_mode = 3
background_energy_multiplier = 4.22
glow_enabled = true
glow_bloom = 0.42
fog_mode = 1
fog_light_color = Color(0.990453, 0, 0.498998, 1)
fog_light_energy = 11.5
fog_sun_scatter = 23.35
fog_density = 1.0
fog_height = 960.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_6nua2"]
texture = ExtResource("1_nlsnc")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0

[sub_resource type="TileSet" id="TileSet_5aojv"]
sources/0 = SubResource("TileSetAtlasSource_6nua2")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h104y"]
bg_color = Color(2.55093e-06, 0.486145, 0.557001, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7xwni"]
bg_color = Color(0, 0.496892, 0.889283, 1)

[sub_resource type="Theme" id="Theme_c4421"]
HSlider/styles/grabber_area = SubResource("StyleBoxFlat_h104y")
HSlider/styles/grabber_area_highlight = SubResource("StyleBoxFlat_7xwni")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ndf4u"]
bg_color = Color(3.99485e-06, 0.724802, 0.22149, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_df4tq"]
bg_color = Color(0, 0.72549, 0.219608, 1)

[sub_resource type="Theme" id="Theme_i25wo"]
HSlider/styles/grabber_area = SubResource("StyleBoxFlat_ndf4u")
HSlider/styles/grabber_area_highlight = SubResource("StyleBoxFlat_df4tq")

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_3m100")

[node name="Turret1" parent="." instance=ExtResource("3_mmksu")]
position = Vector2(288, 254)
dropped = true

[node name="Turret2" parent="." instance=ExtResource("4_ijbhd")]
position = Vector2(310, 164)
dropped = true

[node name="Turret3" parent="." instance=ExtResource("5_2nmox")]
position = Vector2(360, 142)
dropped = true

[node name="turret_4" parent="." instance=ExtResource("6_6wv7i")]
position = Vector2(111, 259)
dropped = true

[node name="Turret4" parent="." instance=ExtResource("4_ijbhd")]
position = Vector2(78, 258)
dropped = true

[node name="Turret5" parent="." instance=ExtResource("3_mmksu")]
position = Vector2(34, 122)
dropped = true

[node name="Turret6" parent="." instance=ExtResource("5_2nmox")]
position = Vector2(200, 164)
dropped = true

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource("Curve2D_wb1y1")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_x0dir")

[node name="Bg" type="Node" parent="."]

[node name="TileMapLayer" type="TileMapLayer" parent="Bg"]
z_index = -2
tile_map_data = PackedByteArray("AAD9/xIAAAACAAUAADD+/xIAAAACAAUAADD//xIAAAACAAUAADAAABIAAAACAAUAADABABIAAAACAAUAADACABIAAAACAAUAADADABIAAAACAAUAADAEABIAAAACAAUAADAFABIAAAACAAUAADAGABIAAAACAAUAADAHABIAAAACAAUAADAIABIAAAACAAUAADAJABIAAAACAAUAADAJABEAAAACAAUAADAJABAAAAACAAUAADAJAA8AAAACAAUAADAJAA4AAAACAAUAADAJAA0AAAACAAUAADAJAAwAAAACAAUAADAKAAwAAAACAAUAADALAAwAAAACAAUAADAMAAwAAAACAAUAADANAAwAAAACAAUAADAOAAwAAAACAAUAADAPAAwAAAACAAUAADAPAA0AAAACAAUAADAPAA4AAAACAAUAADAPAA8AAAACAAUAADAPABAAAAACAAUAADAPABEAAAACAAUAADAPABIAAAACAAUAADAQABIAAAACAAUAADARABIAAAACAAUAADASABIAAAACAAUAADATABIAAAACAAUAADAUABIAAAACAAUAADAUABEAAAACAAUAADAUABAAAAACAAUAADAUAA8AAAACAAUAADAUAA4AAAACAAUAADAUAA0AAAACAAUAADAUAAwAAAACAAUAADAVAAwAAAACAAUAADAWAAwAAAACAAUAADAXAAwAAAACAAUAADAYAAwAAAACAAUAADAZAAwAAAACAAUAADAaAAwAAAACAAUAADAaAAsAAAACAAUAADAaAAoAAAACAAUAADAaAAkAAAACAAUAADAaAAgAAAACAAUAADAaAAcAAAACAAUAADD9/xEAAAACAAQAAAD+/xEAAAACAAQAAAD//xEAAAACAAQAAAAAABEAAAACAAQAAAABABEAAAACAAQAAAACABEAAAACAAQAAAADABEAAAACAAQAAAAEABEAAAACAAQAAAAFABEAAAACAAQAAAAGABEAAAACAAQAAAAHABEAAAACAAQAAAAIABEAAAAEAAQAAAAIAA8AAAAAAAUAAAAIABAAAAAAAAYAAAAIAA0AAAAAAAUAAAAIAA4AAAAAAAYAAAD9/xMAAAABAAcAAAD+/xMAAAACAAcAAAD//xMAAAABAAcAAAAAABMAAAACAAcAAAABABMAAAABAAcAAAACABMAAAACAAcAAAADABMAAAABAAcAAAAEABMAAAACAAcAAAAFABMAAAABAAcAAAAGABMAAAACAAcAAAAHABMAAAABAAcAAAAIABMAAAABAAcAAAAJABMAAAACAAcAAAAKABMAAAAFAAcAAAAKABEAAAADAAUAAAAKABIAAAADAAYAAAAKAA8AAAADAAUAAAAKABAAAAADAAYAAAAKAA0AAAAFAAUAAAAKAA4AAAADAAYAAAALAA0AAAABAAcAAAAMAA0AAAACAAcAAAAJAAsAAAABAAQAAAAKAAsAAAACAAQAAAALAAsAAAABAAQAAAAMAAsAAAACAAQAAAANAAsAAAABAAQAAAAOAAsAAAACAAQAAAAUAAsAAAABAAQAAAAVAAsAAAACAAQAAAAWAAsAAAABAAQAAAAXAAsAAAACAAQAAAAYAAsAAAABAAQAAAAZAAsAAAAEAAQAAAAFAAkAAAABAAcAAAAGAAkAAAACAAcAAAAHAAkAAAABAAcAAAAIAAkAAAACAAcAAAAJAAkAAAABAAcAAAAKAAkAAAACAAcAAAALAAkAAAABAAcAAAAMAAkAAAACAAcAAAANAAkAAAABAAcAAAAOAAkAAAACAAcAAAAPAAkAAAABAAcAAAAQAAkAAAACAAcAAAAFAAgAAAABAAYAAAAGAAgAAAACAAYAAAAHAAgAAAABAAYAAAAIAAgAAAACAAYAAAAJAAgAAAABAAYAAAAKAAgAAAACAAYAAAALAAgAAAABAAYAAAAMAAgAAAACAAYAAAANAAgAAAABAAYAAAAOAAgAAAACAAYAAAAPAAgAAAABAAYAAAAQAAgAAAACAAYAAAAFAAcAAAAFAAQAAAAGAAcAAAACAAQAAAAHAAcAAAABAAQAAAAIAAcAAAACAAQAAAAJAAcAAAABAAQAAAAKAAcAAAACAAQAAAALAAcAAAABAAQAAAAMAAcAAAACAAQAAAANAAcAAAABAAQAAAAOAAcAAAACAAQAAAAPAAcAAAABAAQAAAAQAAcAAAABAAQAAAARAAgAAAABAAUAAAASAAgAAAACAAUAAAARAAcAAAAEAAQAAAASAAcAAAACAAUAAAARAAYAAAAAAAYAAAASAAYAAAACAAUAAAARAAUAAAAAAAUAAAASAAUAAAACAAUAAAATAAUAAAABAAUAAAAUAAUAAAACAAUAAAAVAAUAAAABAAUAAAAWAAUAAAACAAUAAAAXAAUAAAABAAUAAAAYAAUAAAACAAUAAAAZAAUAAAABAAUAAAAaAAUAAAACAAUAAAAaAAYAAAABAAUAAAAIAAsAAAAAAAQAAAAIAAwAAAAAAAUAAAARAAkAAAABAAcAAAASAAkAAAACAAcAAAATAAkAAAADAAcAAAATAAcAAAADAAUAAAATAAgAAAADAAYAAAATAAYAAAAFAAUAAAAUAAYAAAABAAcAAAAVAAYAAAACAAcAAAAWAAYAAAABAAcAAAAXAAYAAAACAAcAAAAYAAYAAAABAAcAAAAZAAYAAAAEAAUAAAAZAAcAAAAAAAUAAAAZAAgAAAAAAAYAAAAZAAkAAAAAAAUAAAAZAAoAAAAAAAYAAAATAAsAAAAAAAQAAAATAAwAAAAAAAUAAAATAA0AAAAAAAYAAAATAA4AAAAAAAUAAAATAA8AAAAAAAYAAAATABAAAAAAAAUAAAATABEAAAAEAAQAAAARABEAAAABAAQAAAASABEAAAACAAQAAAAQABEAAAAFAAQAAAAQAA8AAAADAAUAAAAQABAAAAADAAYAAAAQAA0AAAADAAUAAAAQAA4AAAADAAYAAAAQAAsAAAADAAQAAAAPAAsAAAACAAQAAAAQAAwAAAADAAUAAAANAA0AAAABAAcAAAAOAA0AAAAEAAUAAAAOAA4AAAAAAAUAAAAOAA8AAAAAAAYAAAAOABAAAAAAAAUAAAAOABEAAAAAAAYAAAAOABIAAAAAAAYAAAAOABMAAAAAAAcAAAAPABMAAAABAAcAAAAQABMAAAACAAcAAAARABMAAAABAAcAAAASABMAAAACAAcAAAATABMAAAABAAcAAAAUABMAAAACAAcAAAAVABMAAAADAAcAAAAVABEAAAADAAUAAAAVABIAAAADAAYAAAAVAA8AAAADAAUAAAAVABAAAAADAAYAAAAVAA0AAAAFAAUAAAAVAA4AAAADAAYAAAAWAA0AAAABAAcAAAAXAA0AAAACAAcAAAAYAA0AAAABAAcAAAAZAA0AAAACAAcAAAAaAA0AAAABAAcAAAAbAA0AAAADAAcAAAAbAAsAAAADAAUAAAAbAAwAAAADAAYAAAAbAAkAAAADAAUAAAAbAAoAAAADAAYAAAAbAAcAAAADAAUAAAAbAAgAAAADAAYAAAAbAAUAAAADAAUAAAAbAAYAAAADAAYAAAAbAAQAAAADAAQAAAAZAAQAAAABAAQAAAAaAAQAAAACAAQAAAAXAAQAAAABAAQAAAAYAAQAAAACAAQAAAAVAAQAAAABAAQAAAAWAAQAAAACAAQAAAATAAQAAAABAAQAAAAUAAQAAAACAAQAAAARAAQAAAAAAAQAAAASAAQAAAACAAQAAAAQAAQAAAADAAoAAAAQAAUAAAADAAoAAAAQAAYAAAADAAsAAAAEAAcAAAABAAUAAAAEAAgAAAABAAYAAAAEAAUAAAABAAUAAAAEAAYAAAABAAYAAAACAAUAAAABAAUAAAADAAUAAAACAAUAAAAAAAUAAAABAAUAAAABAAUAAAACAAUAAAD+/wUAAAABAAUAAAD//wUAAAACAAUAAAD8/wUAAAABAAUAAAD9/wUAAAACAAUAAAAFAAUAAAADAAUAAAAFAAYAAAADAAYAAAAFAAQAAAADAAQAAAADAAQAAAABAAQAAAAEAAQAAAACAAQAAAABAAQAAAABAAQAAAACAAQAAAACAAQAAAD//wQAAAABAAQAAAAAAAQAAAACAAQAAAD9/wQAAAABAAQAAAD+/wQAAAACAAQAAAD7/wQAAAABAAQAAAD8/wQAAAACAAQAAAACAAYAAAABAAcAAAADAAYAAAAEAAUAAAAAAAYAAAABAAcAAAABAAYAAAACAAcAAAD+/wYAAAABAAcAAAD//wYAAAACAAcAAAD8/wYAAAABAAcAAAD9/wYAAAACAAcAAAD6/wYAAAABAAcAAAD7/wYAAAACAAcAAAADAAcAAAAAAAUAAAADAAgAAAAAAAYAAAADAAkAAAAAAAcAAAAEAAkAAAABAAcAAAD5/wcAAAACAAoAAAD5/wgAAAACAAsAAAD6/wcAAAADAAoAAAD6/wgAAAADAAsAAAD7/wcAAAACAAoAAAD7/wgAAAACAAsAAAD8/wcAAAADAAoAAAD8/wgAAAADAAsAAAD9/wcAAAACAAoAAAD9/wgAAAACAAsAAAD+/wcAAAADAAoAAAD+/wgAAAADAAsAAAD//wcAAAACAAoAAAD//wgAAAACAAsAAAAAAAcAAAADAAoAAAAAAAgAAAADAAsAAAABAAcAAAACAAoAAAABAAgAAAACAAsAAAACAAcAAAADAAoAAAACAAgAAAADAAsAAAD5/wkAAAACAAoAAAD5/woAAAACAAsAAAD6/wkAAAADAAoAAAD6/woAAAADAAsAAAD7/wkAAAACAAoAAAD7/woAAAACAAsAAAD8/wkAAAADAAoAAAD8/woAAAADAAsAAAD9/wkAAAACAAoAAAD9/woAAAACAAsAAAD+/wkAAAADAAoAAAD+/woAAAADAAsAAAD//wkAAAACAAoAAAD//woAAAACAAsAAAAAAAkAAAADAAoAAAAAAAoAAAADAAsAAAABAAkAAAACAAoAAAABAAoAAAACAAsAAAACAAkAAAADAAoAAAACAAoAAAADAAsAAAADAAoAAAACAAsAAAAEAAoAAAADAAsAAAAFAAoAAAACAAsAAAAGAAoAAAADAAsAAAAHAAoAAAACAAsAAAAIAAoAAAADAAsAAAAJAAoAAAACAAsAAAAKAAoAAAADAAsAAAALAAoAAAACAAsAAAAMAAoAAAADAAsAAAANAAoAAAACAAsAAAAOAAoAAAADAAsAAAAPAAoAAAACAAsAAAAQAAoAAAADAAsAAAARAAoAAAACAAsAAAASAAoAAAADAAsAAAAUAAcAAAACAAoAAAAUAAgAAAACAAsAAAAVAAcAAAADAAoAAAAVAAgAAAADAAsAAAAXAAcAAAACAAoAAAAXAAgAAAACAAsAAAAYAAcAAAADAAoAAAAYAAgAAAADAAsAAAAXAAkAAAACAAoAAAAXAAoAAAACAAsAAAAYAAkAAAADAAoAAAAYAAoAAAADAAsAAAAUAAkAAAACAAoAAAAUAAoAAAACAAsAAAAVAAkAAAADAAoAAAAVAAoAAAADAAsAAAAWAAcAAAACAAoAAAAWAAgAAAACAAsAAAAWAAkAAAACAAoAAAAWAAoAAAACAAsAAAATAAoAAAACAAsAAAARAAsAAAACAAoAAAARAAwAAAACAAsAAAASAAsAAAADAAoAAAASAAwAAAADAAsAAAARAA0AAAACAAoAAAARAA4AAAACAAsAAAASAA0AAAADAAoAAAASAA4AAAADAAsAAAARAA8AAAACAAoAAAARABAAAAACAAsAAAASAA8AAAADAAoAAAASABAAAAADAAsAAAALAA4AAAACAAoAAAALAA8AAAACAAsAAAAMAA4AAAADAAoAAAAMAA8AAAADAAsAAAALABAAAAACAAoAAAALABEAAAACAAsAAAAMABAAAAADAAoAAAAMABEAAAADAAsAAAALABIAAAACAAoAAAALABMAAAACAAsAAAAMABIAAAADAAoAAAAMABMAAAADAAsAAAANAA4AAAADAAoAAAANAA8AAAADAAsAAAANABAAAAADAAoAAAANABEAAAADAAsAAAANABIAAAADAAoAAAANABMAAAADAAsAAAD5/wsAAAACAAoAAAD5/wwAAAACAAsAAAD6/wsAAAADAAoAAAD6/wwAAAADAAsAAAD7/wsAAAACAAoAAAD7/wwAAAACAAsAAAD8/wsAAAADAAoAAAD8/wwAAAADAAsAAAD9/wsAAAACAAoAAAD9/wwAAAACAAsAAAD+/wsAAAADAAoAAAD+/wwAAAADAAsAAAD//wsAAAACAAoAAAD//wwAAAACAAsAAAAAAAsAAAADAAoAAAAAAAwAAAADAAsAAAABAAsAAAACAAoAAAABAAwAAAACAAsAAAACAAsAAAADAAoAAAACAAwAAAADAAsAAAADAAsAAAACAAoAAAADAAwAAAACAAsAAAAEAAsAAAADAAoAAAAEAAwAAAADAAsAAAAFAAsAAAACAAoAAAAFAAwAAAACAAsAAAAGAAsAAAADAAoAAAAGAAwAAAADAAsAAAAFAA0AAAACAAoAAAAFAA4AAAACAAsAAAAGAA0AAAADAAoAAAAGAA4AAAADAAsAAAADAA0AAAACAAoAAAADAA4AAAACAAsAAAAEAA0AAAADAAoAAAAEAA4AAAADAAsAAAABAA0AAAACAAoAAAABAA4AAAACAAsAAAACAA0AAAADAAoAAAACAA4AAAADAAsAAAD//w0AAAACAAoAAAD//w4AAAACAAsAAAAAAA0AAAADAAoAAAAAAA4AAAADAAsAAAD9/w0AAAACAAoAAAD9/w4AAAACAAsAAAD+/w0AAAADAAoAAAD+/w4AAAADAAsAAAD5/w0AAAACAAoAAAD5/w4AAAACAAsAAAD6/w0AAAADAAoAAAD6/w4AAAADAAsAAAD7/w0AAAACAAoAAAD7/w4AAAACAAsAAAD8/w0AAAADAAoAAAD8/w4AAAADAAsAAAD5/w8AAAACAAoAAAD5/xAAAAACAAsAAAD6/w8AAAADAAoAAAD6/xAAAAADAAsAAAD7/w8AAAACAAoAAAD7/xAAAAACAAsAAAD8/w8AAAADAAoAAAD8/xAAAAADAAsAAAD9/w8AAAACAAoAAAD9/xAAAAACAAsAAAD+/w8AAAADAAoAAAD+/xAAAAADAAsAAAD//w8AAAACAAoAAAD//xAAAAACAAsAAAAAAA8AAAADAAoAAAAAABAAAAADAAsAAAABAA8AAAACAAoAAAABABAAAAACAAsAAAACAA8AAAADAAoAAAACABAAAAADAAsAAAADAA8AAAACAAoAAAADABAAAAACAAsAAAAEAA8AAAADAAoAAAAEABAAAAADAAsAAAAFAA8AAAACAAoAAAAFABAAAAACAAsAAAAGAA8AAAADAAoAAAAGABAAAAADAAsAAAAHAAsAAAACAAoAAAAHAAwAAAACAAsAAAAHAA0AAAACAAoAAAAHAA4AAAACAAsAAAAHAA8AAAACAAoAAAAHABAAAAACAAsAAAD5/xEAAAACAAoAAAD5/xIAAAACAAsAAAD6/xEAAAADAAoAAAD6/xIAAAADAAsAAAD7/xEAAAACAAoAAAD7/xIAAAACAAsAAAD8/xEAAAADAAoAAAD8/xIAAAADAAsAAAD5/xMAAAACAAoAAAD5/xQAAAACAAsAAAD6/xMAAAADAAoAAAD6/xQAAAADAAsAAAD7/xMAAAACAAoAAAD7/xQAAAACAAsAAAD8/xMAAAADAAoAAAD8/xQAAAADAAsAAAD9/xQAAAACAAsAAAD+/xQAAAADAAsAAAD//xQAAAACAAsAAAAAABQAAAADAAsAAAABABQAAAACAAsAAAACABQAAAADAAsAAAADABQAAAACAAsAAAAEABQAAAADAAsAAAAFABQAAAACAAsAAAAGABQAAAADAAsAAAAHABQAAAACAAsAAAAIABQAAAADAAsAAAAJABQAAAACAAsAAAAKABQAAAADAAsAAAALABQAAAACAAsAAAAMABQAAAADAAsAAAANABQAAAACAAsAAAAOABQAAAADAAsAAAAPABQAAAACAAsAAAAQABQAAAADAAsAAAARABQAAAACAAsAAAASABQAAAADAAsAAAATABQAAAACAAsAAAAUABQAAAADAAsAAAAVABQAAAACAAsAAAAWABQAAAADAAsAAAAXABQAAAACAAsAAAAYABQAAAADAAsAAAAZABQAAAACAAsAAAAaABQAAAADAAsAAAAbABQAAAACAAsAAAAcABQAAAADAAsAAAAdABQAAAACAAsAAAAeABQAAAADAAsAAAAfABQAAAACAAsAAAAgABQAAAADAAsAAAAhABQAAAACAAsAAAAiABQAAAADAAsAAAAjABQAAAACAAsAAAAkABQAAAADAAsAAAAlABQAAAACAAsAAAAmABQAAAADAAsAAAAWAA4AAAACAAoAAAAWAA8AAAACAAsAAAAXAA4AAAADAAoAAAAXAA8AAAADAAsAAAAYAA4AAAACAAoAAAAYAA8AAAACAAsAAAAZAA4AAAADAAoAAAAZAA8AAAADAAsAAAAaAA4AAAACAAoAAAAaAA8AAAACAAsAAAAbAA4AAAADAAoAAAAbAA8AAAADAAsAAAAcAA4AAAACAAoAAAAcAA8AAAACAAsAAAAdAA4AAAADAAoAAAAdAA8AAAADAAsAAAAeAA4AAAACAAoAAAAeAA8AAAACAAsAAAAfAA4AAAADAAoAAAAfAA8AAAADAAsAAAAgAA4AAAACAAoAAAAgAA8AAAACAAsAAAAhAA4AAAADAAoAAAAhAA8AAAADAAsAAAAiAA4AAAACAAoAAAAiAA8AAAACAAsAAAAjAA4AAAADAAoAAAAjAA8AAAADAAsAAAAkAA4AAAACAAoAAAAkAA8AAAACAAsAAAAlAA4AAAADAAoAAAAlAA8AAAADAAsAAAAmAA4AAAACAAoAAAAmAA8AAAACAAsAAAAnAA4AAAADAAoAAAAnAA8AAAADAAsAAAAoAA4AAAACAAoAAAAoAA8AAAACAAsAAAApAA4AAAADAAoAAAApAA8AAAADAAsAAAAWABAAAAACAAoAAAAWABEAAAACAAsAAAAXABAAAAADAAoAAAAXABEAAAADAAsAAAAYABAAAAACAAoAAAAYABEAAAACAAsAAAAZABAAAAADAAoAAAAZABEAAAADAAsAAAAaABAAAAACAAoAAAAaABEAAAACAAsAAAAbABAAAAADAAoAAAAbABEAAAADAAsAAAAcABAAAAACAAoAAAAcABEAAAACAAsAAAAdABAAAAADAAoAAAAdABEAAAADAAsAAAAeABAAAAACAAoAAAAeABEAAAACAAsAAAAfABAAAAADAAoAAAAfABEAAAADAAsAAAAgABAAAAACAAoAAAAgABEAAAACAAsAAAAhABAAAAADAAoAAAAhABEAAAADAAsAAAAiABAAAAACAAoAAAAiABEAAAACAAsAAAAjABAAAAADAAoAAAAjABEAAAADAAsAAAAkABAAAAACAAoAAAAkABEAAAACAAsAAAAlABAAAAADAAoAAAAlABEAAAADAAsAAAAmABAAAAACAAoAAAAmABEAAAACAAsAAAAnABAAAAADAAoAAAAnABEAAAADAAsAAAAoABAAAAACAAoAAAAoABEAAAACAAsAAAApABAAAAADAAoAAAApABEAAAADAAsAAAAqABAAAAACAAoAAAAqABEAAAACAAsAAAArABAAAAADAAoAAAArABEAAAADAAsAAAAWABIAAAACAAoAAAAWABMAAAACAAsAAAAXABIAAAADAAoAAAAXABMAAAADAAsAAAAYABIAAAACAAoAAAAYABMAAAACAAsAAAAZABIAAAADAAoAAAAZABMAAAADAAsAAAAaABIAAAACAAoAAAAaABMAAAACAAsAAAAbABIAAAADAAoAAAAbABMAAAADAAsAAAAcABIAAAACAAoAAAAcABMAAAACAAsAAAAdABIAAAADAAoAAAAdABMAAAADAAsAAAAeABIAAAACAAoAAAAeABMAAAACAAsAAAAfABIAAAADAAoAAAAfABMAAAADAAsAAAAgABIAAAACAAoAAAAgABMAAAACAAsAAAAhABIAAAADAAoAAAAhABMAAAADAAsAAAAiABIAAAACAAoAAAAiABMAAAACAAsAAAAjABIAAAADAAoAAAAjABMAAAADAAsAAAAkABIAAAACAAoAAAAkABMAAAACAAsAAAAlABIAAAADAAoAAAAlABMAAAADAAsAAAAmABIAAAACAAoAAAAmABMAAAACAAsAAAAnABIAAAADAAoAAAAnABMAAAADAAsAAAAoABIAAAACAAoAAAAoABMAAAACAAsAAAApABIAAAADAAoAAAApABMAAAADAAsAAAAqABIAAAACAAoAAAAqABMAAAACAAsAAAArABIAAAADAAoAAAArABMAAAADAAsAAAAcAAAAAAACAAoAAAAcAAEAAAACAAsAAAAdAAAAAAADAAoAAAAdAAEAAAADAAsAAAAcAAIAAAACAAoAAAAcAAMAAAACAAsAAAAdAAIAAAADAAoAAAAdAAMAAAADAAsAAAAeAAIAAAACAAoAAAAeAAMAAAACAAsAAAAfAAIAAAADAAoAAAAfAAMAAAADAAsAAAAeAAQAAAACAAoAAAAeAAUAAAACAAsAAAAfAAQAAAADAAoAAAAfAAUAAAADAAsAAAAgAAQAAAACAAoAAAAgAAUAAAACAAsAAAAhAAQAAAADAAoAAAAhAAUAAAADAAsAAAAgAAYAAAACAAoAAAAgAAcAAAACAAsAAAAhAAYAAAADAAoAAAAhAAcAAAADAAsAAAAiAAYAAAACAAoAAAAiAAcAAAACAAsAAAAjAAYAAAADAAoAAAAjAAcAAAADAAsAAAAiAAgAAAACAAoAAAAiAAkAAAACAAsAAAAjAAgAAAADAAoAAAAjAAkAAAADAAsAAAAkAAgAAAACAAoAAAAkAAkAAAACAAsAAAAlAAgAAAADAAoAAAAlAAkAAAADAAsAAAAkAAoAAAACAAoAAAAkAAsAAAACAAsAAAAlAAoAAAADAAoAAAAlAAsAAAADAAsAAAAmAAoAAAACAAoAAAAmAAsAAAACAAsAAAAnAAoAAAADAAoAAAAnAAsAAAADAAsAAAAmAAwAAAACAAoAAAAmAA0AAAACAAsAAAAnAAwAAAADAAoAAAAnAA0AAAADAAsAAAAoAAwAAAACAAoAAAAoAA0AAAACAAsAAAApAAwAAAADAAoAAAApAA0AAAADAAsAAAAkAAwAAAACAAoAAAAkAA0AAAACAAsAAAAlAAwAAAADAAoAAAAlAA0AAAADAAsAAAAiAAwAAAACAAoAAAAiAA0AAAACAAsAAAAjAAwAAAADAAoAAAAjAA0AAAADAAsAAAAgAAwAAAACAAoAAAAgAA0AAAACAAsAAAAhAAwAAAADAAoAAAAhAA0AAAADAAsAAAAeAAwAAAACAAoAAAAeAA0AAAACAAsAAAAfAAwAAAADAAoAAAAfAA0AAAADAAsAAAAcAAwAAAACAAoAAAAcAA0AAAACAAsAAAAdAAwAAAADAAoAAAAdAA0AAAADAAsAAAAcAAoAAAACAAoAAAAcAAsAAAACAAsAAAAdAAoAAAADAAoAAAAdAAsAAAADAAsAAAAeAAoAAAACAAoAAAAeAAsAAAACAAsAAAAfAAoAAAADAAoAAAAfAAsAAAADAAsAAAAgAAoAAAACAAoAAAAgAAsAAAACAAsAAAAhAAoAAAADAAoAAAAhAAsAAAADAAsAAAAiAAoAAAACAAoAAAAiAAsAAAACAAsAAAAjAAoAAAADAAoAAAAjAAsAAAADAAsAAAAkAAYAAAACAAoAAAAkAAcAAAACAAsAAAAlAAYAAAADAAoAAAAlAAcAAAADAAsAAAAmAAYAAAACAAoAAAAmAAcAAAACAAsAAAAnAAYAAAADAAoAAAAnAAcAAAADAAsAAAAmAAgAAAACAAoAAAAmAAkAAAACAAsAAAAnAAgAAAADAAoAAAAnAAkAAAADAAsAAAAoAAgAAAACAAoAAAAoAAkAAAACAAsAAAApAAgAAAADAAoAAAApAAkAAAADAAsAAAAmAAQAAAACAAoAAAAmAAUAAAACAAsAAAAnAAQAAAADAAoAAAAnAAUAAAADAAsAAAAmAAIAAAACAAoAAAAmAAMAAAACAAsAAAAnAAIAAAADAAoAAAAnAAMAAAADAAsAAAAmAAAAAAACAAoAAAAmAAEAAAACAAsAAAAnAAAAAAADAAoAAAAnAAEAAAADAAsAAAAoAAYAAAACAAoAAAAoAAcAAAACAAsAAAApAAYAAAADAAoAAAApAAcAAAADAAsAAAAoAAoAAAACAAoAAAAoAAsAAAACAAsAAAApAAoAAAADAAoAAAApAAsAAAADAAsAAAAoAAQAAAACAAoAAAAoAAUAAAACAAsAAAApAAQAAAADAAoAAAApAAUAAAADAAsAAAAoAAIAAAACAAoAAAAoAAMAAAACAAsAAAApAAIAAAADAAoAAAApAAMAAAADAAsAAAAoAAAAAAACAAoAAAAoAAEAAAACAAsAAAApAAAAAAADAAoAAAApAAEAAAADAAsAAAAoAP7/AAACAAoAAAAoAP//AAACAAsAAAApAP7/AAADAAoAAAApAP//AAADAAsAAAAkAAQAAAACAAoAAAAkAAUAAAACAAsAAAAlAAQAAAADAAoAAAAlAAUAAAADAAsAAAAkAAIAAAACAAoAAAAkAAMAAAACAAsAAAAlAAIAAAADAAoAAAAlAAMAAAADAAsAAAAkAAAAAAACAAoAAAAkAAEAAAACAAsAAAAlAAAAAAADAAoAAAAlAAEAAAADAAsAAAAkAP7/AAACAAoAAAAkAP//AAACAAsAAAAlAP7/AAADAAoAAAAlAP//AAADAAsAAAAiAAAAAAACAAoAAAAiAAEAAAACAAsAAAAjAAAAAAADAAoAAAAjAAEAAAADAAsAAAAiAAIAAAACAAoAAAAiAAMAAAACAAsAAAAjAAIAAAADAAoAAAAjAAMAAAADAAsAAAAiAAQAAAACAAoAAAAiAAUAAAACAAsAAAAjAAQAAAADAAoAAAAjAAUAAAADAAsAAAAiAP7/AAACAAoAAAAiAP//AAACAAsAAAAjAP7/AAADAAoAAAAjAP//AAADAAsAAAAgAAIAAAACAAoAAAAgAAMAAAACAAsAAAAhAAIAAAADAAoAAAAhAAMAAAADAAsAAAAgAAAAAAACAAoAAAAgAAEAAAACAAsAAAAhAAAAAAADAAoAAAAhAAEAAAADAAsAAAAeAAAAAAACAAoAAAAeAAEAAAACAAsAAAAfAAAAAAADAAoAAAAfAAEAAAADAAsAAAAcAAQAAAACAAoAAAAcAAUAAAACAAsAAAAdAAQAAAADAAoAAAAdAAUAAAADAAsAAAAcAAYAAAACAAoAAAAcAAcAAAACAAsAAAAdAAYAAAADAAoAAAAdAAcAAAADAAsAAAAcAAgAAAACAAoAAAAcAAkAAAACAAsAAAAdAAgAAAADAAoAAAAdAAkAAAADAAsAAAAeAAYAAAACAAoAAAAeAAcAAAACAAsAAAAfAAYAAAADAAoAAAAfAAcAAAADAAsAAAAeAAgAAAACAAoAAAAeAAkAAAACAAsAAAAfAAgAAAADAAoAAAAfAAkAAAADAAsAAAAgAAgAAAACAAoAAAAgAAkAAAACAAsAAAAhAAgAAAADAAoAAAAhAAkAAAADAAsAAAAaAAIAAAACAAoAAAAaAAMAAAACAAsAAAAbAAIAAAADAAoAAAAbAAMAAAADAAsAAAAYAAIAAAACAAoAAAAYAAMAAAACAAsAAAAZAAIAAAADAAoAAAAZAAMAAAADAAsAAAAWAAIAAAACAAoAAAAWAAMAAAACAAsAAAAXAAIAAAADAAoAAAAXAAMAAAADAAsAAAAUAAIAAAACAAoAAAAUAAMAAAACAAsAAAAVAAIAAAADAAoAAAAVAAMAAAADAAsAAAASAAIAAAACAAoAAAASAAMAAAACAAsAAAATAAIAAAADAAoAAAATAAMAAAADAAsAAAAQAAIAAAACAAoAAAAQAAMAAAACAAsAAAARAAIAAAADAAoAAAARAAMAAAADAAsAAAAQAAAAAAACAAoAAAAQAAEAAAACAAsAAAARAAAAAAADAAoAAAARAAEAAAADAAsAAAAOAAAAAAACAAoAAAAOAAEAAAACAAsAAAAPAAAAAAADAAoAAAAPAAEAAAADAAsAAAAMAAAAAAACAAoAAAAMAAEAAAACAAsAAAANAAAAAAADAAoAAAANAAEAAAADAAsAAAAKAAAAAAACAAoAAAAKAAEAAAACAAsAAAALAAAAAAADAAoAAAALAAEAAAADAAsAAAAKAAIAAAACAAoAAAAKAAMAAAACAAsAAAALAAIAAAADAAoAAAALAAMAAAADAAsAAAAMAAIAAAACAAoAAAAMAAMAAAACAAsAAAANAAIAAAADAAoAAAANAAMAAAADAAsAAAAOAAIAAAACAAoAAAAOAAMAAAACAAsAAAAPAAIAAAADAAoAAAAPAAMAAAADAAsAAAAIAAAAAAACAAoAAAAIAAEAAAACAAsAAAAJAAAAAAADAAoAAAAJAAEAAAADAAsAAAAGAAAAAAACAAoAAAAGAAEAAAACAAsAAAAHAAAAAAADAAoAAAAHAAEAAAADAAsAAAAEAAAAAAACAAoAAAAEAAEAAAACAAsAAAAFAAAAAAADAAoAAAAFAAEAAAADAAsAAAACAAAAAAACAAoAAAACAAEAAAACAAsAAAADAAAAAAADAAoAAAADAAEAAAADAAsAAAACAAIAAAACAAoAAAACAAMAAAACAAsAAAADAAIAAAADAAoAAAADAAMAAAADAAsAAAAAAAIAAAACAAoAAAAAAAMAAAACAAsAAAABAAIAAAADAAoAAAABAAMAAAADAAsAAAD+/wIAAAACAAoAAAD+/wMAAAACAAsAAAD//wIAAAADAAoAAAD//wMAAAADAAsAAAD8/wIAAAACAAoAAAD8/wMAAAACAAsAAAD9/wIAAAADAAoAAAD9/wMAAAADAAsAAAD6/wIAAAACAAoAAAD6/wMAAAACAAsAAAD7/wIAAAADAAoAAAD7/wMAAAADAAsAAAAEAAIAAAACAAoAAAAEAAMAAAACAAsAAAAFAAIAAAADAAoAAAAFAAMAAAADAAsAAAAGAAIAAAACAAoAAAAGAAMAAAACAAsAAAAHAAIAAAADAAoAAAAHAAMAAAADAAsAAAAIAAIAAAACAAoAAAAIAAMAAAACAAsAAAAJAAIAAAADAAoAAAAJAAMAAAADAAsAAAAMAAQAAAACAAoAAAAMAAUAAAACAAsAAAANAAQAAAADAAoAAAANAAUAAAADAAsAAAAOAAQAAAACAAoAAAAOAAUAAAACAAsAAAAPAAQAAAACAAoAAAAPAAUAAAACAAoAAAAKAAQAAAACAAoAAAAKAAUAAAACAAsAAAALAAQAAAADAAoAAAALAAUAAAADAAsAAAAIAAQAAAACAAoAAAAIAAUAAAACAAsAAAAJAAQAAAADAAoAAAAJAAUAAAADAAsAAAAGAAQAAAACAAoAAAAGAAUAAAACAAsAAAAHAAQAAAADAAoAAAAHAAUAAAADAAsAAAASAAAAAAACAAoAAAASAAEAAAACAAsAAAATAAAAAAADAAoAAAATAAEAAAADAAsAAAAUAAAAAAACAAoAAAAUAAEAAAACAAsAAAAVAAAAAAADAAoAAAAVAAEAAAADAAsAAAAWAAAAAAACAAoAAAAWAAEAAAACAAsAAAAXAAAAAAADAAoAAAAXAAEAAAADAAsAAAAYAAAAAAACAAoAAAAYAAEAAAACAAsAAAAZAAAAAAADAAoAAAAZAAEAAAADAAsAAAAaAAAAAAACAAoAAAAaAAEAAAACAAsAAAAbAAAAAAADAAoAAAAbAAEAAAADAAsAAAAgAP7/AAACAAoAAAAgAP//AAACAAsAAAAhAP7/AAADAAoAAAAhAP//AAADAAsAAAAeAP7/AAACAAoAAAAeAP//AAACAAsAAAAfAP7/AAADAAoAAAAfAP//AAADAAsAAAAcAP7/AAACAAoAAAAcAP//AAACAAsAAAAdAP7/AAADAAoAAAAdAP//AAADAAsAAAAaAP7/AAACAAoAAAAaAP//AAACAAsAAAAbAP7/AAADAAoAAAAbAP//AAADAAsAAAAYAP7/AAACAAoAAAAYAP//AAACAAsAAAAZAP7/AAADAAoAAAAZAP//AAADAAsAAAAWAP7/AAACAAoAAAAWAP//AAACAAsAAAAXAP7/AAADAAoAAAAXAP//AAADAAsAAAAUAP7/AAACAAoAAAAUAP//AAACAAsAAAAVAP7/AAADAAoAAAAVAP//AAADAAsAAAASAP7/AAACAAoAAAASAP//AAACAAsAAAATAP7/AAADAAoAAAATAP//AAADAAsAAAAQAP7/AAACAAoAAAAQAP//AAACAAsAAAARAP7/AAADAAoAAAARAP//AAADAAsAAAAOAP7/AAACAAoAAAAOAP//AAACAAsAAAAPAP7/AAADAAoAAAAPAP//AAADAAsAAAAMAP7/AAACAAoAAAAMAP//AAACAAsAAAANAP7/AAADAAoAAAANAP//AAADAAsAAAAKAP7/AAACAAoAAAAKAP//AAACAAsAAAALAP7/AAADAAoAAAALAP//AAADAAsAAAAIAP7/AAACAAoAAAAIAP//AAACAAsAAAAJAP7/AAADAAoAAAAJAP//AAADAAsAAAAGAP7/AAACAAoAAAAGAP//AAACAAsAAAAHAP7/AAADAAoAAAAHAP//AAADAAsAAAAEAP7/AAACAAoAAAAEAP//AAACAAsAAAAFAP7/AAADAAoAAAAFAP//AAADAAsAAAACAP7/AAACAAoAAAACAP//AAACAAsAAAADAP7/AAADAAoAAAADAP//AAADAAsAAAAAAP7/AAACAAoAAAAAAP//AAACAAsAAAABAP7/AAADAAoAAAABAP//AAADAAsAAAD+//7/AAACAAoAAAD+////AAACAAsAAAD///7/AAADAAoAAAD/////AAADAAsAAAD8//7/AAACAAoAAAD8////AAACAAsAAAD9//7/AAADAAoAAAD9////AAADAAsAAAD6//7/AAACAAoAAAD6////AAACAAsAAAD7//7/AAADAAoAAAD7////AAADAAsAAAAAAAAAAAACAAoAAAAAAAEAAAACAAsAAAABAAAAAAADAAoAAAABAAEAAAADAAsAAAD+/wAAAAACAAoAAAD+/wEAAAACAAsAAAD//wAAAAADAAoAAAD//wEAAAADAAsAAAD8/wAAAAACAAoAAAD8/wEAAAACAAsAAAD9/wAAAAADAAoAAAD9/wEAAAADAAsAAAD6/wAAAAACAAoAAAD6/wEAAAACAAsAAAD7/wAAAAADAAoAAAD7/wEAAAADAAsAAAAmAP7/AAACAAoAAAAmAP//AAACAAsAAAAnAP7/AAADAAoAAAAnAP//AAADAAsAAAAGAAYAAAACAAsAAAAHAAYAAAADAAsAAAAIAAYAAAACAAsAAAAJAAYAAAADAAsAAAAKAAYAAAACAAsAAAALAAYAAAADAAsAAAAMAAYAAAACAAsAAAANAAYAAAADAAsAAAAOAAYAAAACAAsAAAAPAAYAAAACAAsAAAA=")
tile_set = SubResource("TileSet_5aojv")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 579.0
offset_bottom = 327.0
color = Color(0, 0, 0, 0.694118)

[node name="Timer" type="Timer" parent="."]
process_callback = 0
autostart = true

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 576.0
offset_bottom = 325.0

[node name="RichTextLabel" type="RichTextLabel" parent="Control"]
layout_mode = 0
offset_right = 576.0
offset_bottom = 74.0
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "[center]TOP HAT TACTICS[center]"
fit_content = true

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 0
offset_left = 255.0
offset_top = 105.0
offset_right = 322.0
offset_bottom = 216.0

[node name="Level1" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "LEVEL1"

[node name="Level2" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
disabled = true
text = "LEVEL 2"

[node name="Level3" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
disabled = true
text = "LEVEL 3"

[node name="MusicVol" type="HSlider" parent="Control"]
layout_mode = 0
offset_left = 544.0
offset_top = 316.0
offset_right = 624.0
offset_bottom = 332.0
rotation = 4.71239
theme = SubResource("Theme_c4421")
max_value = 50.0
step = 5.0
value = 50.0

[node name="SFXVol" type="HSlider" parent="Control"]
layout_mode = 0
offset_left = 500.0
offset_top = 316.0
offset_right = 580.0
offset_bottom = 332.0
rotation = 4.71239
theme = SubResource("Theme_i25wo")
max_value = 50.0
step = 5.0
value = 50.0

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="." groups=["Music"]]
stream = ExtResource("7_nfvdv")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="Control/VBoxContainer/Level1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/Level2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/Level3" to="." method="_on_level_3_pressed"]
